# GyroLib

./: Cargo.toml  readme.md
arduino/gyro/: gyro.ino
coletas/: papD.csv  papE.csv
redes/: papD.flow  papE.flow
src/: c_bindings.rs  comm.rs  dispositivo.rs  lib.rs  main.rs  previsor.rs  sensor.rs  sensores.rs
